# corvid-pet

./: .atlasignore  .gitignore  .trust.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  action.yml  book.toml  fledge.toml  specsync.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  pages.yml  spec-sync.yml  trust.yml
.specsync/: adoption-report.json  config.toml  hashes.json  sdd.json
.specsync/changes/CHG-0001-adopt-trust-1-and-specsync-5/: approvals.json  change.md  context.md  state.json
docs/src/: SUMMARY.md  api.md  changelog.md  cli.md  custom-colors.md  custom-templates.md  feature-flags.md  getting-started.md  github-action.md  introduction.md  life-simulation.md  live-mode.md  persistence.md  specsync.md
examples/: basic.rs  live.rs  persistence.rs  progress.rs  sim.rs  spec_buddy.rs  styles.rs  template.rs
specs/action/: action.spec.md  context.md  requirements.md  tasks.md
specs/cli/: cli.spec.md  context.md  requirements.md  tasks.md
specs/pet/: action.spec.md  cli.spec.md  context.md  life.spec.md  pet.spec.md  requirements.md  tasks.md
src/: animations.rs  art_v2.rs  color.rs  comments.rs  health.rs  lib.rs  life_stage.rs  live.rs  moods.rs  needs.rs  persistence.rs  personality.rs  sim.rs  species.rs  stats.rs  styles.rs  templates.rs
src/integrations/: mod.rs  specsync.rs
